Fix images on mobile

--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -1,6 +1,10 @@
 .images {
 	display: flex;
 	flex-wrap: wrap;
+	flex-direction: column;
+	@include mq(medium) {
+		flex-direction: row;
+	}
 	&-item {
 		background-size: cover;
 		background-position: center center;
